[project]
name = "linux-ql"
version = "0.1.0"
description = "CodeQL static analysis toolkit for the Linux kernel"
requires-python = ">=3.12"
dependencies = ["click>=8.1"]

[project.scripts]
linux-ql = "linux_ql.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linux_ql"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
